--- a/style.css
+++ b/style.css
@@ -84,35 +84,20 @@ header .container .menu-icon{
 }
 
 .top-content .container {
-  margin-top: 100px; 
-  margin-left: 40px;
-  text-align: left;
-  display: inline-block;      
+  margin-top: 100px;
+  width: 80%; 
+  margin: 100px auto;  
+  text-align: center;  
   color: white;
 }
 
-.top-content .container h2{
-  width: 40%;
+.top-content .container h2{  
+  margin-bottom: 15px;
   margin-top:100px;
+  letter-spacing: 5px;
   float:left;
 }
 
-.icon {    
-  float: right;
-  width: 40%;
-  border: 1px solid #fff;
-  padding: 20px;
-  border-radius: 10px;
-  margin-top: 80px;
-  margin-right: 30px;
-  position: relative;  
-}
-
-.icon-image {
-  height: 100%;
-  width: 100%;
-  margin:auto;
-}
 
 /*Main*/
 
@@ -241,7 +226,7 @@ header .container .menu-icon{
 
 /* footer */
 footer{
-  height: 200px;
+  height: 130px;
   padding: 30px;
   background-color: #f5f7ee;
 }
