--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ header .container .menu-icon{
 .top-content {
   float: left;
   width: 100%;
-  height: 500px;
-  background: url("Background.jpg");
+  height: 600px;
+  background: url("/Proyek1/assets/image/Background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   margin-bottom:100px;
@@ -92,7 +92,6 @@ header .container .menu-icon{
 }
 
 .top-content .container h2{  
-  margin-bottom: 15px;
   margin-top:100px;
   letter-spacing: 5px;
   float:left;
@@ -226,14 +225,13 @@ header .container .menu-icon{
 
 /* footer */
 footer{
-  height: 130px;
+  height: 140px;
   padding: 30px;
   background-color: #f5f7ee;
 }
 .footer-logo {
   float: left;
-  font-size: 20px;
-  width: 20%
+  font-size: 20px;  
 }
 
 .footer-logo span {
